k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards
  namespace: default
  labels:
    app: cards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards
  template:
    metadata:
      labels:
        app: cards
    spec:
      containers:
        - name: cards
          image: kregistry.siwko.org:5000/cards:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
