k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-service
  namespace: default
spec:
  selector:
    app: cards
  ports:
    - port: 80
      targetPort: 80
