k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cards-ingress
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/controller: ignore
spec:
  ingressClassName: nginx
  rules:
    - host: cards.siwko.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cards-service
                port:
                  number: 80
